Fix overlay layout on mobile

--- a/client/objectEditor.scss
+++ b/client/objectEditor.scss
@@ -170,8 +170,6 @@
     margin: 0 10px;
     padding: 0;
   }
-}
-@media screen and (max-width: 750px) {
   .button-footer {
     padding: 10px 10px;
   }
