--- a/imports/components/App.scss
+++ b/imports/components/App.scss
@@ -66,3 +66,9 @@
 .overlay-footer button {
   margin-right: 8px;
 }
+@media screen and (max-width: 750px) {
+  .overlay-right {
+    width: 100vw;
+    right: -100vw;
+  }
+}
